--- a/WebKit/qt/ChangeLog
+++ b/WebKit/qt/ChangeLog
@@ -1,3 +1,12 @@
+2007-11-20  Simon Hausmann  <hausmann@kde.org>
+
+        Reviewed by George Staikos <staikos@kde.org>.
+
+        Added a default argument to textContent for the hoveringOverLink signal to keep existing two-argument connections working
+        
+
+        * Api/qwebpage.h:
+
 2007-11-20  George Staikos  <staikos@kde.org>
 
         Reviewed by Simon Hausmann <hausmann@kde.org>.
