2007-11-20  Mark Rowe  <mrowe@apple.com>
        Reviewed by Alp Toker.

        * WebKit.pri: Add in -Wno-unused-parameter to silence warnings in WebCore.

2007-11-20  Mark Rowe  <mrowe@apple.com>

        Reviewed by Alp Toker.

        * config.h: Change #if to #ifdef to silence warnings on non-Apple platforms.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27928 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-20  Mark Rowe  <mrowe@apple.com>
+
+        Reviewed by Alp Toker.
+
+        * WebKit.pri: Add in -Wno-unused-parameter to silence warnings in WebCore.
+
 2007-11-20  Alp Toker  <alp@atoker.com>
 
         Reviewed by Simon Hausmann.
