--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,12 @@
+2007-11-20  Adam Treat  <treat@kde.org>
+
+        Reviewed by David Kilzer.
+
+        * Prepend git branch name to $baseProductDir
+
+        * Scripts/VCSUtils.pm:
+        * Scripts/webkitdirs.pm:
+
 2007-11-20  Mark Rowe  <mrowe@apple.com>
 
         Reviewed by Simon Hausmann.
