--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,12 @@
+2007-11-20  Alp Toker  <alp@atoker.com>
+
+        Reviewed by Mark Rowe.
+
+        Avoid pointlessly mallocing and freeing this transform matrix.
+
+        * platform/gtk/FontPlatformDataGtk.cpp:
+        (WebCore::FontPlatformData::FontPlatformData):
+
 2007-11-20  Naiem Shaik  <naiem.shaik@gmail.com>
 
         Reviewed by Alp Toker.
