2007-11-21  Eric Seidel  <eric@webkit.org>
        Reviewed by Tim Hatcher.

        Abstract more of DRT into static methods

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (setDefaultsToConsistentValuesForTesting):
        (setupSignalHandlers):
        (allocateGlobalControllers):
        (releaseAndZero):
        (releaseGlobalControllers):
        (dumpRenderTree):
        (shouldLogFrameLoadDelegates):
        (createCFURLFromPathOrURL):
        (resetWebViewToConsistentStateBeforeTesting):
        (runTest):


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27942 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -2,6 +2,24 @@
 
         Reviewed by Tim Hatcher.
 
+        Abstract more of DRT into static methods
+
+        * DumpRenderTree/mac/DumpRenderTree.mm:
+        (setDefaultsToConsistentValuesForTesting):
+        (setupSignalHandlers):
+        (allocateGlobalControllers):
+        (releaseAndZero):
+        (releaseGlobalControllers):
+        (dumpRenderTree):
+        (shouldLogFrameLoadDelegates):
+        (createCFURLFromPathOrURL):
+        (resetWebViewToConsistentStateBeforeTesting):
+        (runTest):
+
+2007-11-21  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Tim Hatcher.
+
         Pull DumpRenderTreeWindow and DumpRenderTreePasteboard out into their own files
 
         * DumpRenderTree/DumpRenderTree.h:
