--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,12 @@
+2007-11-21  Xan Lopez  <xan@gnome.org>
+
+        Reviewed by Alp Toker.
+
+        Clarify scroll event processing with a comment.
+
+        * platform/gtk/PlatformScrollBarGtk.cpp:
+        (gtkScrollEventCallback):
+
 2007-11-21  Timothy Hatcher  <timothy@apple.com>
 
         Reviewed by Adam Roben.
