--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,15 @@
+2007-11-21  Alp Toker  <alp@atoker.com>
+
+        Reviewed by Mark Rowe.
+
+        http://bugs.webkit.org/show_bug.cgi?id=16071
+        Curl backend handles EINTR incorrectly
+
+        Defer timers during select() to avoid interruption by timer signals.
+
+        * platform/network/curl/ResourceHandleManager.cpp:
+        (WebCore::ResourceHandleManager::downloadTimerCallback):
+
 2007-11-21  Mark Rowe  <mrowe@apple.com>
 
         Reviewed by Tim Hatcher.
