--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,12 @@
+2007-11-22  Julien Chaffraix  <julien.chaffraix@gmail.com>
+
+        Reviewed by Alexey.
+
+        Bug 15530: XMLHttpRequest should not support certain methods
+
+        * http/tests/xmlhttprequest/xmlhttprequest-forbidden-methods-exception-expected.txt: Added.
+        * http/tests/xmlhttprequest/xmlhttprequest-forbidden-methods-exception.html: Added.
+
 2007-11-21  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Eric Seidel.
