2007-11-22  Alp Toker  <alp@atoker.com>
        Reviewed by Mark Rowe.

        GTK+ drawing fix.

        Add a check to avoid crashing when the GraphicsContext is not
        associated with a GdkEventExpose. This was noticed when adding
        printing support but might be triggered in other situations too.

        * platform/gtk/WidgetGtk.cpp:
        (WebCore::Widget::paint):


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27972 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,16 @@
+2007-11-22  Alp Toker  <alp@atoker.com>
+
+        Reviewed by Mark Rowe.
+
+        GTK+ drawing fix.
+
+        Add a check to avoid crashing when the GraphicsContext is not
+        associated with a GdkEventExpose. This was noticed when adding
+        printing support but might be triggered in other situations too.
+
+        * platform/gtk/WidgetGtk.cpp:
+        (WebCore::Widget::paint):
+
 2007-11-22  Julien Chaffraix  <julien.chaffraix@gmail.com>
 
         Reviewed by Alexey.
