2007-11-22  Mark Rowe  <mrowe@apple.com>
        Reviewed by Alp Toker.

        Fix build-webkit to propagate make's exit status if it fails.

        * Scripts/webkitdirs.pm:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27975 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,11 @@
+2007-11-22  Mark Rowe  <mrowe@apple.com>
+
+        Reviewed by Alp Toker.
+
+        Fix build-webkit to propagate make's exit status if it fails.
+
+        * Scripts/webkitdirs.pm:
+
 2007-11-22  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Mark Rowe.
