Revert part of my r27935 change that made the Tip balloons         animate with CSS transitions. The balloon was only opacity 0,         so it would cause it's row to highlight when hovering over         another row.
        * page/inspector/NetworkPanel.js:
        * page/inspector/inspector.css:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27979 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,13 @@
+2007-11-22  Timothy Hatcher  <timothy@apple.com>
+
+        Revert part of my r27935 change that made the Tip balloons
+        animate with CSS transitions. The balloon was only opacity 0,
+        so it would cause it's row to highlight when hovering over
+        another row.
+
+        * page/inspector/NetworkPanel.js:
+        * page/inspector/inspector.css:
+
 2007-11-22  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Maciej Stachowiak.
