--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,14 @@
+2007-11-23  Dan Bernstein  <mitz@apple.com>
+
+        Reviewed by Alexey Proskuryakov.
+
+        - test the matrix transforms are applied on the correct side
+
+        * fast/transforms/matrix-02.html: Added.
+        * platform/mac/fast/transforms/matrix-02-expected.checksum: Added.
+        * platform/mac/fast/transforms/matrix-02-expected.png: Added.
+        * platform/mac/fast/transforms/matrix-02-expected.txt: Added.
+
 2007-11-23  Alexey Proskuryakov  <ap@webkit.org>
 
         Reviewed by Maciej.
