Not reviewed, trivial leak fix.
        Fix xsltUnicodeSortFunction() memory leaks.

        * xml/XSLTUnicodeSort.cpp:
        (WebCore::xsltUnicodeSortFunction):



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27987 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,5 +1,14 @@
 2007-11-23  Alexey Proskuryakov  <ap@webkit.org>
 
+        Not reviewed, trivial leak fix.
+
+        Fix xsltUnicodeSortFunction() memory leaks.
+
+        * xml/XSLTUnicodeSort.cpp:
+        (WebCore::xsltUnicodeSortFunction):
+
+2007-11-23  Alexey Proskuryakov  <ap@webkit.org>
+
         Reviewed by Maciej.
 
         <rdar://problem/5539306> REGRESSION: redirect fails when subframe's document is opened but
