Another build fix specific to trunk (instead of the stable branch) to fix make clean (which the buildbots call).
Signed-off-by: George Staikos <staikos@kde.org>


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27989 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,11 @@
+2007-11-23  Simon Hausmann  <hausmann@webkit.org>
+
+        Reviewed by George Staikos <staikos@kde.org>.
+
+        Another build fix specific to trunk (instead of the stable branch) to fix make clean (which the buildbots call).
+
+        * WebCore.pro:
+
 2007-11-23  Alexey Proskuryakov  <ap@webkit.org>
 
         Not reviewed, trivial leak fix.
